<resources>
    <string name="app_name">App Sleep</string>
    <string name="app_sleep">App Sleep\n</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="botonIngresar">INGRESAR</string>
    <string name="olvido_su_c">¿Olvido Su Clave?</string>
    <string name="eres_un_usu">¿Eres Un Usuario Nuevo?</string>
    <string name="cambiar_con">¿Cambiar Contraseña?</string>
    <string name="correoElectronico">Correo Electrónico</string>
    <string name="password2">Confirmar Contraseña</string>
    <string name="botonRegistrar">REGISTRAR</string>
    <string name="correoRecuperacion">Email de recuperación</string>
    <string name="botonRecuperacion">ENVIAR RECUPERACIÓN</string>
    <string name="recibira_un_c">RECIBIRÁ UN CORREO CON\nUNA CONTRASEÑA TEMPORAL</string>
    <string name="correoElectronico2">Ingrese su email</string>
    <string name="passwordinit">Contraseña</string>
    <string name="passwordinit2">Nueva contraseña</string>
    <string name="passwordcomfirm3">Confirme contraseña</string>
    <string name="botonConfirmar">CAMBIAR CONTRASEÑA</string>
    <string name="time">4:00</string>
    <string name="am">A.M.</string>
    <string name="diario">diario</string>
    <string name="enableAlarm">Activar</string>
    <string name="lista_de_al">Lista de Alarmas</string>
    <string name="label">ACTIVIDAD\nNOCTURNA</string>
    <string name="label1">RITMO\nCIRCADIANO</string>
    <string name="body">¿Tipo de reporte?</string>
    <string name="mostrar_nota">Actividades Nocturnas</string>
    <string name="mostrar_nota2">10:30 P.M\tRonquido\t5 Segundos\n\n11:05 P.M\tMovimiento\t2 Segundos\n\n02:25 A.M\t\tVoz\t2 Segundos</string>
    <string name="mostrar_hora">Hora</string>
    <string name="mostrar_act">Actividad</string>
    <string name="mostrar_dur">Duración</string>
</resources>