<?xml version="1.0" encoding="utf-8"?>
<!-- Auto layout, variables, and unit scale are not yet supported -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/app_sleep"
        android:layout_width="wrap_content"
        android:layout_height="59dp"

        android:layout_marginTop="81dp"
        android:fontFamily="@font/roboto_condensed_light"
        android:gravity="top"
        android:lineSpacingExtra="-40sp"
        android:text="@string/app_sleep"
        android:textAppearance="@style/app_sleep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usuarioOutlinedTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:layout_marginTop="300dp"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordOutlinedTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="25dp"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuarioOutlinedTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/containedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="30dp"
        android:onClick="openListarAlarmasActivity"
        android:text="@string/botonIngresar"
        app:backgroundTint="#084F92"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordOutlinedTextField" />

    <TextView
        android:id="@+id/olvido_su_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:layout_marginStart="60dp"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:onClick="olvidoSuclaveActivity"
        android:text="@string/olvido_su_c"
        android:textAppearance="@style/olvido_su_c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containedButton" />

    <TextView
        android:id="@+id/eres_un_usu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/eres_un_usu"
        android:textAppearance="@style/eres_un_usu"
        android:lineSpacingExtra="0sp"
        android:gravity="top"
        android:onClick="abrirRegistrarActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/olvido_su_c"
        />
    <TextView
        android:id="@+id/cambiar_con"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/cambiar_con"
        android:textAppearance="@style/cambiar_con"
        android:lineSpacingExtra="0sp"
        android:gravity="top"
        android:onClick="cambiarContrasenaActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eres_un_usu"
        />
</androidx.constraintlayout.widget.ConstraintLayout>