<?xml version="1.0" encoding="utf-8"?>
<!-- Auto layout, variables, and unit scale are not yet supported -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="258dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/enableAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="28dp"
        app:trackTint="#89B2DD"
        app:thumbTint="#89B2DD"
        android:checked="true"
        app:layout_constraintStart_toStartOf="@+id/rectangle_1"
        app:layout_constraintTop_toTopOf="@+id/rectangle_1" />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:gravity="top"
        android:text="@string/time"
        android:textAppearance="@style/time"
        app:layout_constraintStart_toStartOf="@+id/rectangle_1"
        app:layout_constraintTop_toTopOf="@+id/rectangle_1" />

    <TextView
        android:id="@+id/am"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="24dp"
        android:gravity="right|top"
        android:text="@string/am"
        android:textAppearance="@style/am"
        app:layout_constraintStart_toStartOf="@+id/rectangle_1"
        app:layout_constraintTop_toTopOf="@+id/rectangle_1" />

    <TextView
        android:id="@+id/diario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="56dp"
        android:gravity="end|top"
        android:text="@string/diario"
        android:textAppearance="@style/diario"
        app:layout_constraintStart_toStartOf="@+id/rectangle_1"
        app:layout_constraintTop_toTopOf="@+id/rectangle_1" />

</androidx.constraintlayout.widget.ConstraintLayout>